# pySCASso

./: .gitignore  Dockerfile  LICENSE  Readme.md  project_paths.py  pyproject.toml  requirements.txt  run_docker.sh  run_podman.sh
pcaps/: SecurityModeComplete.pcap  oai_attach.pcap  oai_split_attach.pcap  oneplus8_attach.pcap  open5gs_attach.pcap  open5gs_attach_invalid_ue_caps.pcap  open5gs_attach_reattach.pcap  open5gs_attach_sbi.pcap  open5gs_nrf_reg_disc.pcapng  open5gs_sync_failure.pcap  open5gs_sync_failure_timeout.pcap
scas/: __init__.py  helper.py  logger.py  packet_builder.py  packet_sender.py
scas/capture/: __init__.py  capture.py  local_file_capture.py  local_live_capture.py
scas/device_interfaces/: __init__.py  device.py  device_config.py
scas/device_interfaces/specific/: __init__.py  dummy.py  dummy.yaml  free5gc.py  generic_vendor.py  open5gs.py  ueransim.py
scas/packet_type/: __init__.py  common.py  f1ap.py  http2.py  nas_5gs.py  nas_eps.py  ngap.py  nr_rrc.py
tests/: conftest.py  test_config.yaml.default
tests/Rel_16/33116_MME/: test_33116_g10_4_2_2_2_1.py  test_33116_g10_4_2_2_2_2.py  test_33116_g10_4_2_2_2_3.py  test_33116_g10_4_2_2_2_4.py  test_33116_g10_4_2_2_2_5.py  test_33116_g10_4_2_2_3_1.py  test_33116_g10_4_2_2_3_2.py  test_33116_g10_4_2_2_3_3.py  test_33116_g10_4_2_2_3_4.py  test_33116_g10_4_2_2_4_1.py  test_33116_g10_4_2_2_4_2.py  test_33116_g10_4_2_2_5_1.py  test_33116_g10_4_2_2_5_2.py  test_33116_g10_4_2_2_5_3.py  test_33116_g10_4_2_2_6_1.py
tools/: filter_pcap.md  scas.db  test_consolidation.py  ueransim_sync_fail.patch
(+379 files in other folders)
