[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pySCASso"
description = "Python framework for SCAS test automation"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "pyshark",
    "py",
    "pyyaml",
]
dynamic = ["version"]

[tool.setuptools.package-data]
mypkg = ["*.ini", "*.pcapng", "*.pcap", "*.yaml"]

[tool.pytest.ini_options]
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s %(message)s"
